Upgrade to JUnit 5 and convert one test class. (#25)
Co-authored-by: David Cover <david_cover@alum.drexel.edu>